Attempt fix for ubuntu endless loading